# callback_fn

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: authentication.rs  debug.rs  design_by_contracts.rs
src/: impls.rs  lib.rs
src/impls/: callback.rs  codegen.rs  fn_with_callbacks.rs  generate_fn.rs
tests/: authentication.rs  callback.rs  design_by_contract.rs  general_use_case.rs  lib.rs
