[package]
name = "callback_fn"
description = "A library for callback functions."
version = "0.1.0"
edition = "2021"
authors = ["Daisuke Ito <daisuke.ito.cs@gmail.com>"]
license = "MIT"
keywords = ["callback", "design-by-contract", "macro"]
readme = "README.md"
repository = "https://github.com/poi2/callback_fn"

[lib]
name = "callback_fn"
path = "src/lib.rs"
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [
    "extra-traits",
    "full",
    "visit",
    "visit-mut",
] }

[dev-dependencies]
chrono = "0.4"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
